feat(doc): #2994.243 create rule 355
- Created R355 for served file extensions
- Added a Description
- Added ASVS and CWE references
- Fixed some minor writing issues


Former-commit-id: d3b9d33332571307987dcdc235de2de5bae2f1b3

--- a/content/pages/rules/architecture/324/index.adoc
+++ b/content/pages/rules/architecture/324/index.adoc
@@ -15,7 +15,7 @@ especially when they depend on external input.
 
 Systems must guarantee that all redirects lead to a controlled or trusted site.
 In general, redirects based on input data should be avoided as they could
-enable to *phishing* attacks.
+enable *phishing* attacks.
 If they are required, they should be controlled so that users are only
 redirected to trusted sites.
 
