--- a/content/pages/rules/cryptography/336/index.adoc
+++ b/content/pages/rules/cryptography/336/index.adoc
@@ -35,7 +35,7 @@ The software stores or transmits sensitive data using an encryption scheme that
 is theoretically sound,
 but is not strong enough for the level of protection required.
 
-. [[r3]] link:https://cwe.mitre.org/data/definitions/757.html[CWE-757: Selection of Less-Secure Algorithm During Negotiation ('Algorithm Downgrade')].
+. [[r3]] link:https://cwe.mitre.org/data/definitions/757.html[Algorithm Downgrade].
 A protocol or its implementation supports interaction between multiple actors
 and allows those actors to negotiate which algorithm should be used as a
 protection mechanism such as encryption or authentication,
