--- a/content/pages/rules/devices/354/index.adoc
+++ b/content/pages/rules/devices/354/index.adoc
@@ -17,7 +17,7 @@ being downgraded.
 The product does not use or incorrectly uses a protection mechanism that
 provides sufficient defense against directed attacks against the product.
 
-. [[r2]] link:https://cwe.mitre.org/data/definitions/757.html[CWE-757: Selection of Less-Secure Algorithm During Negotiation ('Algorithm Downgrade')].
+. [[r2]] link:https://cwe.mitre.org/data/definitions/757.html[Algorithm Downgrade].
 A protocol or its implementation supports interaction between multiple actors
 and allows those actors to negotiate which algorithm should be used as a
 protection mechanism such as encryption or authentication,
