--- a/content/pages/rules/services/262/index.adoc
+++ b/content/pages/rules/services/262/index.adoc
@@ -140,4 +140,10 @@ V14.2 Dependency.(14.2.4)]
 Verify that third party components come from pre-defined, trusted and
 continually maintained repositories.
 
-. [[r13]] link:https://www.owasp.org/index.php/Top_10_2013-A9-Using_Components_with_Known_Vulnerabilities[Top 10 2013-A9-Using Components with Known Vulnerabilities].
+. [[r13]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A9-Using_Components_with_Known_Vulnerabilities[OWASP Top 10 A9:2017-Using Components with Known Vulnerabilities].
+Components, such as libraries, frameworks, and other software modules,
+run with the same privileges as the application.
+If a vulnerable component is exploited,
+such an attack can facilitate serious data loss or server takeover.
+Applications and **API**s using components with known vulnerabilities may
+undermine application defenses and enable various attacks and impacts.
