--- a/content/pages/rules/files/043/index.adoc
+++ b/content/pages/rules/files/043/index.adoc
@@ -17,7 +17,14 @@ must have a **Content-Type** explicitly defined.
 The product does not validate or incorrectly validates input that can affect
 the control flow or data flow of a program.
 
-. [[r2]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r2]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A1-Injection[OWASP Top 10 A1:2017-Injection].
+Injection flaws, such as **SQL**, **NoSQL**, **OS**, and *LDAP* injection,
+occur when untrusted data is sent to an interpreter as part of a command or
+query.
+The attacker’s hostile data can trick the interpreter into executing unintended
+commands or accessing data without proper authorization.
+
+. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V5.3 Output encoding and Injection Prevention Requirements.(5.3.1)]
 Verify that output encoding is relevant for the interpreter and context
 required.
@@ -26,7 +33,7 @@ JavaScript, URL Parameters, *HTTP* headers, *SMTP*, and others as the context
 requires, especially from untrusted inputs
 (e.g. names with Unicode or apostrophes, such as ねこ or O'Hara).
 
-. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V12.3 File execution Requirements.(12.3.4)]
 Verify that the application protects against reflective file download (*RFD*)
 by validating or ignoring user-submitted filenames in a *JSON*, *JSONP*,
@@ -34,7 +41,7 @@ or *URL* parameter,
 the response **Content-Type** header should be set to **text/plain**,
 and the **Content-Disposition** header should have a fixed filename.
 
-. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V12.5 File Download Requirements.(12.5.1)]
 Verify that the web tier is configured to serve only files with specific file
 extensions to prevent unintentional information and source code leakage.
@@ -42,29 +49,29 @@ For example, backup files (e.g. *.bak*), temporary working files (e.g. *.swp*),
 compressed files (*.zip*, *.tar.gz*, etc.) and other extensions commonly used
 by editors should be blocked unless required.
 
-. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V12.5 File Download Requirements.(12.5.2)]
 Verify that direct requests to uploaded files will never be executed as
 **HTML**/**JavaScript** content.
 
-. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V13.1 Generic Web Service Security Verification Requirements.(13.1.5)]
 Verify that requests containing unexpected or missing content types are
 rejected with appropriate headers
 (*HTTP* response status **406 Unacceptable** or
 **415 Unsupported Media Type**).
 
-. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r8]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V13.2 RESTful Web Service Verification Requirements.(13.2.5)]
 Verify that *REST* services explicitly check the incoming **Content-Type** to
 be the expected one, such as *application/xml* or *application/JSON*.
 
-. [[r8]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r9]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V14.4 HTTP Security Headers Requirements.(14.4.1)]
 Verify that every *HTTP* response contains a content type header specifying a
 safe character set (e.g., *UTF-8*, **ISO 8859-1**).
 
-. [[r9]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r10]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V14.4 HTTP Security Headers Requirements.(14.4.2)]
 Verify that all *API* responses contain
 **Content-Disposition: attachment; filename="api.json"**
