--- a/content/pages/rules/files/340/index.adoc
+++ b/content/pages/rules/files/340/index.adoc
@@ -35,7 +35,14 @@ UI layers that belong to another application or domain,
 which can lead to user confusion about which interface the user is interacting
 with.
 
-. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r3]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A1-Injection[OWASP Top 10 A1:2017-Injection].
+Injection flaws, such as **SQL**, **NoSQL**, **OS**, and *LDAP* injection,
+occur when untrusted data is sent to an interpreter as part of a command or
+query.
+The attacker’s hostile data can trick the interpreter into executing unintended
+commands or accessing data without proper authorization.
+
+. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V1.12 Secure File Upload Architectural Requirements.(1.12.2)]
 Verify that user-uploaded files - if required to be displayed or downloaded
 from the application - are served by either octet stream downloads,
@@ -43,12 +50,12 @@ or from an unrelated domain, such as a cloud file storage bucket.
 Implement a suitable content security policy to reduce the risk from XSS
 vectors or other attacks from the uploaded file.
 
-. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V12.5 File Download Requirements.(12.5.2)]
 Verify that direct requests to uploaded files will never be executed as
 **HTML**/**JavaScript** content.
 
-. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V14.4 HTTP Security Headers Requirements.(14.4.3)]
 Verify that a content security policy (*CSPv2*) is in place that helps mitigate
 impact for *XSS* attacks like *HTML*, *DOM*, *JSON*, and *JavaScript* injection
