--- a/content/pages/rules/authentication/153/index.adoc
+++ b/content/pages/rules/authentication/153/index.adoc
@@ -36,13 +36,20 @@ communication channel that can be sniffed by unauthorized actors.
 Login pages do not use adequate measures to protect the user name and password
 while they are in transit from the client to the server.
 
-. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r4]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A2-Broken_Authentication[OWASP Top 10 A2:2017-Broken Authentication].
+Application functions related to authentication and session management are
+often implemented incorrectly,
+allowing attackers to compromise passwords, keys, or session tokens,
+or to exploit other implementation flaws to assume other users’ identities
+temporarily or permanently.
+
+. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V2.7 Out of Band Verifier Requirements.(2.7.1)]
 Verify that clear text out of band (NIST "restricted") authenticators,
 such as *SMS* or *PSTN*, are not offered by default,
 and stronger alternatives such as push notifications are offered first.
 
-. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V2.7 Out of Band Verifier Requirements.(2.7.4)]
 Verify that the out of band authenticator and verifier communicates over a
 secure independent channel.
