--- a/content/pages/rules/authentication/225/index.adoc
+++ b/content/pages/rules/authentication/225/index.adoc
@@ -14,3 +14,12 @@ must not indicate which part of the authentication was incorrect.
 == Findings
 
 * [inner]#link:/web/findings/026/[F026. User enumeration]#
+
+== References
+
+. [[r1]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A2-Broken_Authentication[OWASP Top 10 A2:2017-Broken Authentication].
+Application functions related to authentication and session management are
+often implemented incorrectly,
+allowing attackers to compromise passwords, keys, or session tokens,
+or to exploit other implementation flaws to assume other users’ identities
+temporarily or permanently.
