feat(doc): #2994.247 add owasp top 10 refs
- Added OWASP Top 10 references to R228, R229, R230, R231, R233,
R236, R237, R238, R264 and R319
- Added CWE reference to R230
- Adjusted R230 for lix compliance
- Fixed some minor typos and grammar issues


Former-commit-id: f9f3eb28f31546607147b5e3493ecf199b23aaf5

--- a/content/pages/rules/authentication/227/index.adoc
+++ b/content/pages/rules/authentication/227/index.adoc
@@ -9,7 +9,7 @@
 == Requirement
 
 The system must notify, under any access attempt,
-that access on the same system is only available to authorized users.
+that access to the same system is only available for authorized users.
 
 == Description
 
