--- a/content/pages/rules/authentication/233/index.adoc
+++ b/content/pages/rules/authentication/233/index.adoc
@@ -9,3 +9,12 @@
 == Requirement
 
 The system must not display passwords on the screen or on visible resources.
+
+== References
+
+. [[r1]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A2-Broken_Authentication[OWASP Top 10 A2:2017-Broken Authentication].
+Application functions related to authentication and session management are
+often implemented incorrectly,
+allowing attackers to compromise passwords, keys, or session tokens,
+or to exploit other implementation flaws to assume other users’ identities
+temporarily or permanently.
